--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/ChatGPT Image Aug 10, 2025, 03_31_54 PM.png" alt="Hero Image">
+                <img src="images/hero-pic.webp" alt="Hero Image">
             </div>
         </div>
     </section>
