--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="images/logo.webp" type="image/svg+xml">
 </head>
 <body>
     <header>
         <div class="container">
             <nav>
-                <div class="logo"><img src="images/logo.svg" alt="Portfolio Logo"></div>
+                <div class="logo"><img src="images/logo.webp" alt="Portfolio Logo"></div>
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="services.html">Services</a></li>
